--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-TextRoom v0.2.3
+TextRoom v0.2.4 beta
 
 (c)by Petar Toushkov 2008 <peter dot toushkov at gmail.com>
 released under terms of GNU General Public License v2
@@ -69,6 +69,7 @@ Ctrl+V - Paste
 Ctrl+A - Select All
 Ctrl+Z - Undo (Ctrl+Shift+Z to Redo)
 Ctrl+T - Indent first lines (useful due to unresolved bug)
+Shift+F4 - Go back to cursor position
 Ctrl+F - Find
 F3 - Find Next
 Shift+F3 - Find previous
