--- a/README
+++ b/README
@@ -1,8 +1,12 @@
 TextRoom v0.2.4 beta
 http://code.google.com/p/textroom/
 
-(c)by Petar Toushkov 2008 <peter dot toushkov at gmail.com>
-released under terms of GNU General Public License v2
+
+(c) by Omer Bahri Gordebak 2008 <gordebak at gmail dot com>
+released under terms of GNU General Public License v3
+
+(c) by Petar Toushkov 2008 <peter dot toushkov at gmail dot com>
+released under terms of GNU General Public License v3
 
 Parts of this program's code are from the Phrasis project:
 
@@ -12,8 +16,9 @@ and are
 
 Copyright (C) 2006 Jacob R Rideout <jacob@jacobrideout.net>
 
-Additional help, code and insights by:
+Code, artwork, help and insights by:
 adamvert - from http://ubuntuforums.org/
+Donny Lim - <donnylucky at gmail dot com>
 Magnus Edvardsson (a.k.a. zebulon M) - from http://ubuntuforums.org/
 
 
@@ -31,7 +36,7 @@ tested.
 
 3. Installation
 ---------------
-To compile TextRoom, you will need Qt4 developement packages
+To compile TextRoom, you will need Qt4 development packages
 (usually named -devel- or -dev in some distros). Cd to the directory
 this README file is. Compilation includes three steps:
 
@@ -47,7 +52,14 @@ You can change its path by editing textroom.pro
 
 The program stores its preferences in ~/.config/textroom/TextRoom.conf
 
-4. How to use TextRoom
+4. Features
+
+  * configurable colors and fonts
+  * configurable behavior: full-screen on/off, auto save, flow mode (disable delete and backspace keys), load last document on startup, remember position in text for the last file, horizontal progress slider
+  * display current time and date, some statistics
+  * keyboard shortcuts for the most common tasks (if you start the program for the first time, just press F1 for help)
+
+5. How to use TextRoom
 ----------------------
 
 Keyboard shortcuts:
@@ -75,8 +87,8 @@ Ctrl+F - Find
 F3 - Find Next
 Shift+F3 - Find previous
 
-Ctrl+D - Show date and time in statusbar
-Ctrl+L - Show statistics in statusbar
+Ctrl+D - Insert Date
+Ctrl+L - Insert Date
 Ctrl+U - Options
 
 You can get some additional information on your current file
