--- a/README
+++ b/README
@@ -1,19 +1,15 @@
-TextRoom v0.2.4 beta
+TextRoom v0.6.2 beta
 http://code.google.com/p/textroom/
 
 
-(c) by Omer Bahri Gordebak 2008 <gordebak at gmail dot com>
-released under terms of GNU General Public License v3
+(C) by Omer Bahri Gordebak 2008 <gordebak at gmail dot com>
+(C) by Petar Toushkov 2008 <peter dot toushkov at gmail dot com>
 
-(c) by Petar Toushkov 2008 <peter dot toushkov at gmail dot com>
-released under terms of GNU General Public License v3
+Released under terms of GNU General Public License v3
 
 Parts of this program's code are from the Phrasis project:
-
 http://code.google.com/p/phrasis/
-
 and are
-
 Copyright (C) 2006 Jacob R Rideout <jacob@jacobrideout.net>
 
 Code, artwork, help and insights by:
@@ -24,76 +20,101 @@ Magnus Edvardsson (a.k.a. zebulon M) - from http://ubuntuforums.org/
 
 1. Introduction
 ---------------
-
-TextRoom is a pretty basic full-screen text editor, heavily inspired
-by similar text editors such as Q10, JDarkRoom and so on.
+TextRoom is a basic full-screen rich text editor for writers.
 
 2. Requirements
 ---------------
-TextRoom requires Qt library version >=4.3.2.
-It *may* work with earlier versions of Qt (from 4.x family), but it was not
-tested.
+ * Qt >= 4.4, 
+ * SDL >= 1.2.13,
+ * SDL_mixer >= 1.2.8,
+ * aspell >= 0.6.0.
 
 3. Installation
 ---------------
-To compile TextRoom, you will need Qt4 development packages
-(usually named -devel- or -dev in some distros). Cd to the directory
+To compile TextRoom, you will need the development packages
+(usually named -devel- or -dev in some distros) of the required packages. 
+
+Cd to the directory
 this README file is. Compilation includes three steps:
 
 qmake-qt4
 make
+sudo make install
+make clean
 
-and then, as root:
+You can run the program by entering "textroom" (without the quotes) in the command line, or simply by clicking the Linux menu entry under Office section.
 
-make install
-
-"make install" copies the newly compiled "bin/textroom" to "/usr/local/bin".
-You can change its path by editing textroom.pro
-
-The program stores its preferences in ~/.config/textroom/TextRoom.conf
+The program stores its preferences in ~/.config/textroom/TextRoom.conf, but you won't need to edit this file.
 
 4. Features
+-----------
+-Version 0.6.2
 
-  * configurable colors and fonts
-  * configurable behavior: full-screen on/off, auto save, flow mode (disable delete and backspace keys), load last document on startup, remember position in text for the last file, horizontal progress slider
-  * display current time and date, some statistics
-  * keyboard shortcuts for the most common tasks (if you start the program for the first time, just press F1 for help)
+ * Printing support.
+ * Spellcheck with aspell.
+ * Background images.
+ * More statusbar customizations, like transparency.
+ * File association with .txr files. 
+ * Restoring all settings to defaults.
+ * Plain text only or rich text options.
+
+-Version 0.6.1
+
+ * basic rich text editing: bold, italic, underline, and changing font, font size and color
+ * configurable statusbar colors and fonts
+ * configurable editor width and height
+ * configurable behavior: full-screen on/off, auto save, flow mode (disable delete and backspace keys), load last document on startup, remember position in text for the last file
+ * insert current time and/or date in a configurable fashion
+ * live word count for all text and selected text
+ * live character count option
+ * configurable page count option
+ * live clock on statusbar
+ * targets: setting deadline from a graphical calendar
+ * targets: setting a target word count
+ * targets: setting short deadlines to write in minutes
+ * keyboard shortcuts for the most common tasks (if you start the program for the first time, just press F1 for help)
+ * typing sounds similar to a typewriter which can be disabled.
+may be cross-platform: We are only supporting Linux right now. Because we don't have Windows or MacOSX.
 
 5. How to use TextRoom
 ----------------------
+-Keyboard shortcuts:
 
-Keyboard shortcuts:
+F1 ----------- Help screen
+F2 ----------- Options and Settings screen.
+F3 ----------- About
+F5 ----------- Check Spelling
+F11 ---------- Fullscreen on/off
+Escape ------- Quit or exit fullscreen, close About and Help dialogs 
+Ctrl+M ------- Minimize TextRoom
+Ctrl+Q ------- Quit
 
-F1 - Help screen
-F11 - Fullscreen on/off
-Escape - Quit or exit fullscreen (depends on current active window state)
-Ctrl+H - About
-Ctrl+M - Minimize TextRoom
-Ctrl+Q - Quit
-
-Ctrl+N - New
-Ctrl+O - Open
-Ctrl+S - Save
+Ctrl+N ------- New
+Ctrl+O ------- Open
+Ctrl+S ------- Save
 Ctrl+Shift+S - Save As
+Ctrl+P ------- Print
 
-Ctrl+X - Cut
-Ctrl+C - Copy
-Ctrl+V - Paste
-Ctrl+A - Select All
-Ctrl+Z - Undo (Ctrl+Shift+Z to Redo)
-Ctrl+T - Indent first lines (useful due to unresolved bug)
-Shift+F4 - Go back to cursor position
-Ctrl+F - Find
-F3 - Find Next
-Shift+F3 - Find previous
+Ctrl+X ------- Cut
+Ctrl+C ------- Copy
+Ctrl+V ------- Paste
+Ctrl+A ------- Select All
+Ctrl+Z ------- Undo
+Ctrl+Shift+Z - Redo
 
-Ctrl+D - Insert Date
-Ctrl+L - Insert Date
-Ctrl+U - Options
+Ctrl+W ------- Change the current format
+Ctrl+B ------- Bold
+Ctrl+I ------- Italic
+Ctrl+U ------- Underline
+Ctrl+Up/Down - Change font size
 
-You can get some additional information on your current file
-by placing the mouse pointer over its name or statistics in the
-statusbar (right and left lower corners of the screen).
+Shift+F4 ----- Go back to cursor position
+Ctrl+F ------- Find
+F4 ----------- Find Next
+Ctrl+F4 ------ Find previous
+
+Ctrl+D ------- Insert Date
+Ctrl+T ------- Insert Time
 
 
  
